--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@
 node_modules
 .pnp
 .pnp.js
+.vscode
 
 # testing
 coverage
 
 # production
-build
+build7
+*.zip
 
 # misc
 .DS_Store
@@ -21,6 +23,7 @@ build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
 
 #music
 music1.ogg
